[tool.poetry]
name       	= "xontrib-zoxide"
version    	= "1.0.0"
description	= "Zoxide integration for xonsh"
authors    	= ["Gyuri Horak <dyuri@horak.hu>"]
license    	= "MIT"
readme     	= "README.md"
repository 	= "https://github.com/dyuri/xontrib-zoxide"
keywords   	= ['xontrib', 'xonsh']

classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: System :: Shells",
  "Topic :: System :: System Shells",
  "Topic :: Terminals",
  "Programming Language :: Python :: 3",
]

packages = [{ include = "xontrib" }]

[tool.poetry.urls]
Homepage       	= "https://github.com/dyuri/xontrib-zoxide"
Documentation  	= "https://github.com/dyuri/xontrib-zoxide/blob/master/README.md"
Code           	= "https://github.com/dyuri/xontrib-zoxide"
"Issue tracker"	= "https://github.com/dyuri/xontrib-zoxide/issues"

[tool.poetry.dependencies]
python	= ">=3.7"
xonsh 	= ">=0.12.5"

[tool.poetry.dev-dependencies]
pytest = ">=7.0"

[build-system]
requires     	= ["poetry-core>=1.0.0"]
build-backend	= "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
include      	= '\.pyi?$'
force-exclude	= '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.vscode
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | disk-cache.sqlite3
)/
'''
